exports[`no-useless-switch-case > invalid(1): switch (foo) {\n\tcase undefined:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

  1 | switch (foo) {
  2 | 	case undefined:
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(1): switch (foo) {\n\tcase undefined:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case undefined:
    | 	^^^^^^^^^^^^^^^ Useless case in switch statement.
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(10): switch (foo) {\n\tcase a:\n\tcase b:\n\t\thandleCaseAB();\n\t\tbreak;\n\tcase d:\n\tcase d:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

   1 | switch (foo) {
   2 | 	case a:
   3 | 	case b:
   4 | 		handleCaseAB();
   5 | 		break;
   6 | 	case d:
   7 | 	case d:
   8 | 	default:
   9 | 		handleDefaultCase();
  10 | 		break;
  11 | }

`;

exports[`no-useless-switch-case > invalid(10): switch (foo) {\n\tcase a:\n\tcase b:\n\t\thandleCaseAB();\n\t\tbreak;\n\tcase d:\n\tcase d:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
   1 | switch (foo) {
   2 | 	case a:
   3 | 	case b:
   4 | 		handleCaseAB();
   5 | 		break;
>  6 | 	case d:
     | 	^^^^^^^ Useless case in switch statement.
   7 | 	case d:
   8 | 	default:
   9 | 		handleDefaultCase();
  10 | 		break;
  11 | }

Suggestion 1/1: Remove this case.:
   1 | switch (foo) {
   2 | 	case a:
   3 | 	case b:
   4 | 		handleCaseAB();
   5 | 		break;
   6 | 	
   7 | 	case d:
   8 | 	default:
   9 | 		handleDefaultCase();
  10 | 		break;
  11 | }

`;

exports[`no-useless-switch-case > invalid(10): switch (foo) {\n\tcase a:\n\tcase b:\n\t\thandleCaseAB();\n\t\tbreak;\n\tcase d:\n\tcase d:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 3`] = `

Message:
   1 | switch (foo) {
   2 | 	case a:
   3 | 	case b:
   4 | 		handleCaseAB();
   5 | 		break;
   6 | 	case d:
>  7 | 	case d:
     | 	^^^^^^^ Useless case in switch statement.
   8 | 	default:
   9 | 		handleDefaultCase();
  10 | 		break;
  11 | }

Suggestion 1/1: Remove this case.:
   1 | switch (foo) {
   2 | 	case a:
   3 | 	case b:
   4 | 		handleCaseAB();
   5 | 		break;
   6 | 	case d:
   7 | 	
   8 | 	default:
   9 | 		handleDefaultCase();
  10 | 		break;
  11 | }

`;

exports[`no-useless-switch-case > invalid(11): switch (foo) {\n\tcase a:\n\tcase b:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

  1 | switch (foo) {
  2 | 	case a:
  3 | 	case b:
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

`;

exports[`no-useless-switch-case > invalid(11): switch (foo) {\n\tcase a:\n\tcase b:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case a:
    | 	^^^^^^^ Useless case in switch statement.
  3 | 	case b:
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	case b:
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

`;

exports[`no-useless-switch-case > invalid(11): switch (foo) {\n\tcase a:\n\tcase b:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 3`] = `

Message:
  1 | switch (foo) {
  2 | 	case a:
> 3 | 	case b:
    | 	^^^^^^^ Useless case in switch statement.
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	case a:
  3 | 	
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

`;

exports[`no-useless-switch-case > invalid(12): switch (foo) {\n\t// eslint-disable-next-line\n\tcase a:\n\tcase b:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

  1 | switch (foo) {
  2 | 	// eslint-disable-next-line
  3 | 	case a:
  4 | 	case b:
  5 | 	default:
  6 | 		handleDefaultCase();
  7 | 		break;
  8 | }

`;

exports[`no-useless-switch-case > invalid(12): switch (foo) {\n\t// eslint-disable-next-line\n\tcase a:\n\tcase b:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
  2 | 	// eslint-disable-next-line
  3 | 	case a:
> 4 | 	case b:
    | 	^^^^^^^ Useless case in switch statement.
  5 | 	default:
  6 | 		handleDefaultCase();
  7 | 		break;
  8 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	// eslint-disable-next-line
  3 | 	case a:
  4 | 	
  5 | 	default:
  6 | 		handleDefaultCase();
  7 | 		break;
  8 | }

`;

exports[`no-useless-switch-case > invalid(13): switch (foo) {\n\tcase a:\n\t// eslint-disable-next-line\n\tcase b:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

  1 | switch (foo) {
  2 | 	case a:
  3 | 	// eslint-disable-next-line
  4 | 	case b:
  5 | 	default:
  6 | 		handleDefaultCase();
  7 | 		break;
  8 | }

`;

exports[`no-useless-switch-case > invalid(13): switch (foo) {\n\tcase a:\n\t// eslint-disable-next-line\n\tcase b:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case a:
    | 	^^^^^^^ Useless case in switch statement.
  3 | 	// eslint-disable-next-line
  4 | 	case b:
  5 | 	default:
  6 | 		handleDefaultCase();
  7 | 		break;
  8 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	// eslint-disable-next-line
  4 | 	case b:
  5 | 	default:
  6 | 		handleDefaultCase();
  7 | 		break;
  8 | }

`;

exports[`no-useless-switch-case > invalid(14): switch (a) {case probe(): default: break;} 1`] = `

  1 | switch (a) {case probe(): default: break;}

`;

exports[`no-useless-switch-case > invalid(14): switch (a) {case probe(): default: break;} 2`] = `

Message:
> 1 | switch (a) {case probe(): default: break;}
    |             ^^^^^^^^^^^^^ Useless case in switch statement.

`;

exports[`no-useless-switch-case > invalid(15): switch (a) {case i++: default: break;} 1`] = `

  1 | switch (a) {case i++: default: break;}

`;

exports[`no-useless-switch-case > invalid(15): switch (a) {case i++: default: break;} 2`] = `

Message:
> 1 | switch (a) {case i++: default: break;}
    |             ^^^^^^^^^ Useless case in switch statement.

`;

exports[`no-useless-switch-case > invalid(16): switch (a) {case (x = 3): default: break;} 1`] = `

  1 | switch (a) {case (x = 3): default: break;}

`;

exports[`no-useless-switch-case > invalid(16): switch (a) {case (x = 3): default: break;} 2`] = `

Message:
> 1 | switch (a) {case (x = 3): default: break;}
    |             ^^^^^^^^^^^^^ Useless case in switch statement.

`;

exports[`no-useless-switch-case > invalid(17): switch (a) {case obj.property: default: break;} 1`] = `

  1 | switch (a) {case obj.property: default: break;}

`;

exports[`no-useless-switch-case > invalid(17): switch (a) {case obj.property: default: break;} 2`] = `

Message:
> 1 | switch (a) {case obj.property: default: break;}
    |             ^^^^^^^^^^^^^^^^^^ Useless case in switch statement.

Suggestion 1/1: Remove this case.:
  1 | switch (a) { default: break;}

`;

exports[`no-useless-switch-case > invalid(18): switch (a) {case b: default: break;} 1`] = `

  1 | switch (a) {case b: default: break;}

`;

exports[`no-useless-switch-case > invalid(18): switch (a) {case b: default: break;} 2`] = `

Message:
> 1 | switch (a) {case b: default: break;}
    |             ^^^^^^^ Useless case in switch statement.

Suggestion 1/1: Remove this case.:
  1 | switch (a) { default: break;}

`;

exports[`no-useless-switch-case > invalid(19): switch (a) {case \"x\": default: break;} 1`] = `

  1 | switch (a) {case "x": default: break;}

`;

exports[`no-useless-switch-case > invalid(19): switch (a) {case \"x\": default: break;} 2`] = `

Message:
> 1 | switch (a) {case "x": default: break;}
    |             ^^^^^^^^^ Useless case in switch statement.

Suggestion 1/1: Remove this case.:
  1 | switch (a) { default: break;}

`;

exports[`no-useless-switch-case > invalid(2): switch (foo) {\n\tcase null:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

  1 | switch (foo) {
  2 | 	case null:
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(2): switch (foo) {\n\tcase null:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case null:
    | 	^^^^^^^^^^ Useless case in switch statement.
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(3): switch (foo) {\n\tcase a:\n\tcase undefined:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

Filename: file.ts

  1 | switch (foo) {
  2 | 	case a:
  3 | 	case undefined:
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

`;

exports[`no-useless-switch-case > invalid(3): switch (foo) {\n\tcase a:\n\tcase undefined:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case a:
    | 	^^^^^^^ Useless case in switch statement.
  3 | 	case undefined:
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	case undefined:
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

`;

exports[`no-useless-switch-case > invalid(4): switch (foo) {\n\tcase undefined:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

Filename: file.js

  1 | switch (foo) {
  2 | 	case undefined:
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(4): switch (foo) {\n\tcase undefined:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case undefined:
    | 	^^^^^^^^^^^^^^^ Useless case in switch statement.
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(5): switch (foo) {\n\tcase a:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

Filename: file.ts

  1 | switch (foo) {
  2 | 	case a:
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(5): switch (foo) {\n\tcase a:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case a:
    | 	^^^^^^^ Useless case in switch statement.
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(6): switch (foo) {\n\tcase a:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

  1 | switch (foo) {
  2 | 	case a:
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(6): switch (foo) {\n\tcase a:\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case a:
    | 	^^^^^^^ Useless case in switch statement.
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(7): switch (foo) {\n\tcase a: {\n\t}\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

  1 | switch (foo) {
  2 | 	case a: {
  3 | 	}
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

`;

exports[`no-useless-switch-case > invalid(7): switch (foo) {\n\tcase a: {\n\t}\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case a: {
    | 	^^^^^^^ Useless case in switch statement.
  3 | 	}
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(8): switch (foo) {\n\tcase a: {\n\t\t;;\n\t\t{\n\t\t\t;;\n\t\t\t{\n\t\t\t\t;;\n\t\t\t}\n\t\t}\n\t}\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

   1 | switch (foo) {
   2 | 	case a: {
   3 | 		;;
   4 | 		{
   5 | 			;;
   6 | 			{
   7 | 				;;
   8 | 			}
   9 | 		}
  10 | 	}
  11 | 	default:
  12 | 		handleDefaultCase();
  13 | 		break;
  14 | }

`;

exports[`no-useless-switch-case > invalid(8): switch (foo) {\n\tcase a: {\n\t\t;;\n\t\t{\n\t\t\t;;\n\t\t\t{\n\t\t\t\t;;\n\t\t\t}\n\t\t}\n\t}\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
   1 | switch (foo) {
>  2 | 	case a: {
     | 	^^^^^^^ Useless case in switch statement.
   3 | 		;;
   4 | 		{
   5 | 			;;
   6 | 			{
   7 | 				;;
   8 | 			}
   9 | 		}
  10 | 	}
  11 | 	default:
  12 | 		handleDefaultCase();
  13 | 		break;
  14 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	default:
  4 | 		handleDefaultCase();
  5 | 		break;
  6 | }

`;

exports[`no-useless-switch-case > invalid(9): switch (foo) {\n\tcase a:\n\tcase (( b ))         :\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 1`] = `

  1 | switch (foo) {
  2 | 	case a:
  3 | 	case (( b ))         :
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

`;

exports[`no-useless-switch-case > invalid(9): switch (foo) {\n\tcase a:\n\tcase (( b ))         :\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 2`] = `

Message:
  1 | switch (foo) {
> 2 | 	case a:
    | 	^^^^^^^ Useless case in switch statement.
  3 | 	case (( b ))         :
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	
  3 | 	case (( b ))         :
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

`;

exports[`no-useless-switch-case > invalid(9): switch (foo) {\n\tcase a:\n\tcase (( b ))         :\n\tdefault:\n\t\thandleDefaultCase();\n\t\tbreak;\n} 3`] = `

Message:
  1 | switch (foo) {
  2 | 	case a:
> 3 | 	case (( b ))         :
    | 	^^^^^^^^^^^^^^^^^^^^^^ Useless case in switch statement.
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

Suggestion 1/1: Remove this case.:
  1 | switch (foo) {
  2 | 	case a:
  3 | 	
  4 | 	default:
  5 | 		handleDefaultCase();
  6 | 		break;
  7 | }

`;
